# inplace_optional

./: .clang-format  .cmake-format  CMakeLists.txt  README.md
include/inplace_optional/: wip.hpp
test/: CMakeLists.txt
